syntax = "proto3";

package com.example.kw.grpc.demo;

service GreetingService {
  rpc hello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
